src/objects/Toolkit_Search_Label__mdt.object
<CustomObject>
    <description>UI Labels used by Toolkit Search</description>
    <fields>
        <fullName>Block__c</fullName>
        <defaultValue>&quot;Block&quot;</defaultValue>
        <description>The UI Label for the Block dropdown</description>
        <label>Block</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>&quot;Product Category&quot;</defaultValue>
        <description>The label for Project Category dropdown</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <defaultValue>&quot;Product Class&quot;</defaultValue>
        <description>The UI Label for the Product Class dropdown</description>
        <label>Class</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPA_Regulation__c</fullName>
        <defaultValue>&quot;EPA Regulation&quot;</defaultValue>
        <description>The label for the &apos;EPA Regulation&apos; Web Resource Type</description>
        <label>EPA Regulation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environmental_Issue__c</fullName>
        <defaultValue>&quot;Environmental Issue&quot;</defaultValue>
        <description>The label for the &apos;Environmental Issue&apos; Web Resource Type</description>
        <label>Environmental Issue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <defaultValue>&quot;Issue&quot;</defaultValue>
        <description>The label for the Issue Web Resource Type</description>
        <label>Issue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoResultsLabel__c</fullName>
        <defaultValue>&quot;There are no results for the selected criteria&quot;</defaultValue>
        <description>The label for &quot;There are no results for the selected criteria&quot;</description>
        <label>NoResultsLabel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <defaultValue>&quot;Offering&quot;</defaultValue>
        <description>The UI label for the Offering dropdown</description>
        <label>Offering</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Improvement_Areas__c</fullName>
        <defaultValue>&quot;Performance Improvement Areas&quot;</defaultValue>
        <description>The label for the &apos;Performance Improvement Areas&apos; Web Resource Type</description>
        <label>Performance Improvement Areas</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>&quot;Solution&quot;</defaultValue>
        <description>The UI Label for the Product dropdown</description>
        <label>Product</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <defaultValue>&quot;Project Phase&quot;</defaultValue>
        <description>The label for the &apos;Project Phase&apos; Web Resource Type</description>
        <label>Project Phase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <defaultValue>&quot;Sector&quot;</defaultValue>
        <description>The label for the Sector Web Resource Type</description>
        <label>Sector</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectAnOption__c</fullName>
        <defaultValue>&quot;Select an Option&quot;</defaultValue>
        <description>The label for &quot;Select an Option&quot;</description>
        <label>SelectAnOption</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shore__c</fullName>
        <defaultValue>&quot;Shore&quot;</defaultValue>
        <description>The UI label for the Shore dropdown</description>
        <label>Shore</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Provider__c</fullName>
        <defaultValue>&quot;U.S. Solution Provider&quot;</defaultValue>
        <description>The label for the US Solution Provider</description>
        <label>Solution Provider</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <defaultValue>&quot;Solution&quot;</defaultValue>
        <description>The label for Solution</description>
        <label>Solution</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalProviders__c</fullName>
        <description>The label for &apos;Total Providers&apos; on Toolkit Search.</description>
        <label>Total Providers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Providers__c</fullName>
        <description>The label for &apos;Total Providers&apos; on Toolkit Search.</description>
        <label>Total Providers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <defaultValue>&quot;Use Case&quot;</defaultValue>
        <description>The label for the &apos;Use Case&apos; Web Resource Type</description>
        <label>Use Case</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Toolkit Search Label</label>
    <pluralLabel>Toolkit Search Labels</pluralLabel>
</CustomObject>